# IP-Disclosure-CoPilot-Agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/data/: ingest_patents.py
app/schemas/: disclosure_schema.py
app/services/: evaluator.py
app/tests/: test_endpoints.py
