[project]
name = "ip-disclosure-copilot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.139.2",
    "instructor>=1.15.4",
    "langchain-text-splitters>=1.1.2",
    "ngrok>=1.7.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.51.0",
]
